#337 word 'Mixer' instead of 'filter'

--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -11,7 +11,7 @@
         
         <input type="text" id="size-nr" ng-model="fontSize" size="3" class="specimen-tool">
         <size-rope></size-rope>
-        <input placeholder="filter" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
+        <input placeholder="Mixer" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
         <strict ng-if="selectedSpecimen.name != 'glyph range'"></strict>
         <div class="fontby-container">
             <span class="toolbar-label">Font by: </span>
