Added wrappers and title attrs to font and gearbox widgets.

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -363,7 +363,11 @@
                float: left;
                margin-right: 8px;
            }
-           
+
+           .custom-widget-wrapper {
+               float:left;
+           }
+
            #size-nr {
                font-size: 12px;
                font-family: "Lato";
