--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -148,7 +148,7 @@
 	}
 	
 		#project {
-		    padding: 8px;
+		    padding: 0;
 			float: left;
 		}
 	
@@ -1366,7 +1366,7 @@
             font-size: 10px;
             margin-left: 2px;
         }
-
+        
         .lm-head:hover {
             background: #eee;
         }
