Help menu: Add Donate item

--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -34,6 +34,14 @@
             <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://metapolator.com" target="_blank">metapolator.com</a></div>
             <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://twitter.com/metapolator" target="_blank">@metapolator</a></div>
             <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">+Metapolator</a></b></div>
+            <div class="lm-button">
+            <form id="help-paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <a href="javascript:{}" onclick="document.getElementById('help-paypal').submit(); return false;">Donate</a>
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="CMQZM2FJDP4VA">
+            <img alt="" border="0" src="https://www.paypalobjects.com/de_DE/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            </div>
             <div class="lm-divider"></div>
             <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Open Tech View in New Tab</a></b></div>
             </div>
