Help menu: Add FAQ item

--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -28,6 +28,7 @@
         </div>
         <div class="lm-body" ng-if="data.localmenu.help">
             <div class="lm-button"><a href="https://github.com/metapolator/metapolator" target="_blank">Github Project</a></div>
+            <div class="lm-button"><a href="https://github.com/metapolator/metapolator/wiki/faq" target="_blank">FAQ</a></div>
             <div class="lm-button"><a title="Browse existing feature requests and bug reports on our Github issue tracker" href="https://github.com/metapolator/metapolator/issues" target="_blank">Github Issues</a></div>
             <div class="lm-button"><a title="To report a bug or request a feature, create a new issue in our Github issue tracker" href="https://github.com/metapolator/metapolator/issues/new" target="_blank">New Issue</a></div>
             <div class="lm-divider"></div>
