Specimen toolbar: Rewrite mixer placeholder + title
#512

--- a/purple-pill/templates/specimen.html
+++ b/purple-pill/templates/specimen.html
@@ -16,8 +16,8 @@
         <div title="Drag to Change Font Size" class="custom-widget-wrapper">
             <size-rope></size-rope>
         </div>
-        <input placeholder="Mixer" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
-        <div title="Sprinkled | 50–50 | Exclusive Mixing" class="custom-widget-wrapper">
+        <input placeholder="Mix glyphs…" type="text" id="filter" ng-model="filterOptions.filter" size="7" class="specimen-tool">
+        <div title="Set how glyphs are mixed with the specimen" class="custom-widget-wrapper">
             <strict ng-if="selectedSpecimen.name != 'Glyph Range'"></strict>
         </div>
         <div class="fontby-container">
