--- a/purple-pill/templates/splashscreen.html
+++ b/purple-pill/templates/splashscreen.html
@@ -3,7 +3,7 @@
 </div>
 <div id="splash-right">
     <h1>Metapolator</h1>
-    <h2>For Designing Typeface Families</em></h2>
+    <h2>For Designing Fonts and Families Faster</em></h2>
     <p>Firefox users will see this dialog disappear in a moment,<br />
       and if you see a <em>Warning: Unresponsive script</em> error<br />
       then tick the box and click <em>Continue</em>.</p>
