#523 lm-head active when hovering lm-body

--- a/purple-pill/templates/fontexport.html
+++ b/purple-pill/templates/fontexport.html
@@ -1,5 +1,5 @@
 <localmenu class="localmenu" class="left">
-    <div class="lm-head" ng-mousedown="data.selectMenu('fonts')">
+    <div class="lm-head" ng-mousedown="data.selectMenu('fonts')" ng-class="{'lm-button-hover':data.localmenu.fonts}">
         <b>Fonts</b>
     </div>
     <div class="lm-body" ng-if="data.localmenu.fonts">
