--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -1,5 +1,5 @@
 <localmenu class="localmenu" class="left">
-    <div class="lm-head" ng-mousedown="data.selectMenu('instances')">
+    <div class="lm-head" ng-mousedown="data.selectMenu('instances')" ng-class="{'lm-button-hover':data.localmenu.instances}">
         <b>Instances</b>
     </div>
     <div class="lm-body" ng-if="data.localmenu.instances">
