--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -1,5 +1,5 @@
 <localmenu class="localmenu" class="left">
-    <div class="lm-head" ng-mousedown="data.selectMenu('masters')">
+    <div class="lm-head" ng-mousedown="data.selectMenu('masters')" ng-class="{'lm-button-hover':data.localmenu.masters}">
         <b>Masters</b>
     </div>
     <div class="lm-body" ng-if="data.localmenu.masters">
