--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -303,12 +303,12 @@
             font-size: 9px;
             text-transform: uppercase;
             text-align: center;
-            background: #ddd;
+            background: #eee;
         }
 
     .specimen {
         padding: 20px 0 40px 0;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #eee;
     }
 
 
@@ -573,14 +573,14 @@
     }
 
     .unconfigured {
-        background: #ddd;
+        background: #eee;
     }
     
     .design-space-container {
         width: 100%;
         height: 100%;
         padding: 40px;
-        color: #ddd;
+        color: #eee;
         font-style: italic;
     }
 
@@ -686,7 +686,7 @@
                 z-index: 10;
                 left: 24px;
                 top: 0px;
-                background: #ddd;
+                background: #eee;
                 color: #333;
                 padding: 4px 8px;
                 font-size: 12px;
@@ -854,12 +854,12 @@
         margin-left: 24px;
         padding: 4px 10px;
         width: 50%;
-        color: #ddd;
+        color: #eee;
         cursor: pointer;
         background: #fff;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
-        border: 1px solid #ddd;
+        border: 1px solid #eee;
         border-bottom: 0px;
     }
         
@@ -1199,7 +1199,7 @@
         font-size: 20px;
         font-family: "Lato";
         border: 0px;
-        background: #ddd;
+        background: #eee;
         color: #f85c37;
     }
     
@@ -1263,7 +1263,7 @@
             bottom: 0px;
             height: 100%;
             text-align: center;
-            background: #ddd;
+            background: #eee;
             padding: 12px;
             cursor: default;
         }
@@ -1368,7 +1368,7 @@
             margin-left: 2px;
         }
         
-        .lm-head:hover {
+        .lm-head:hover, .lm-body:hover .lm-head {
             background: #eee;
         }
         
@@ -1423,17 +1423,17 @@
         }
         
             .lm-button:hover, .lm-button.lm-selected {
-                background: #ddd;
+                background: #eee;
             }
             
-            .lm-button.lm-button-hover {
-                background: #ddd;
+            .lm-button-hover {
+                background: #eee;
             }
             
        .lm-divider {
            width: 100%;
            margin: 4px 0;
-           background: #ddd;
+           background: #eee;
            height: 1px;
         }
         
