--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -1,6 +1,6 @@
 <div id="project">
     <localmenu class="localmenu" class="left">
-        <div class="lm-head" ng-mousedown="data.selectMenu('project')">
+        <div class="lm-head" ng-mousedown="data.selectMenu('project')" ng-class="{'lm-button-hover':data.localmenu.project}">
             <b>Project</b> <span id="project-name" ng-model="data.projectName" class="project-rename"></span>
         </div>
         <div class="lm-body" ng-if="data.localmenu.project">
@@ -23,7 +23,7 @@
 
 <div id="help" class="unselectable">
     <localmenu class="localmenu right">
-        <div class="lm-head" ng-mousedown="data.selectMenu('help')">
+        <div class="lm-head" ng-mousedown="data.selectMenu('help')" ng-class="{'lm-button-hover':data.localmenu.help}">
             <b>Help</b>
         </div>
         <div class="lm-body" ng-if="data.localmenu.help">
