#516 new design gearbox

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -346,7 +346,8 @@
         
             specimentoolbar input {
                 color: #515151;
-                padding: 4px;
+                height: 19px;
+                padding: 4px 4px 0px 4px;
             }
             
             specimentoolbar select {
@@ -366,15 +367,13 @@
            }
 
            .custom-widget-wrapper {
-               float:left;
-               padding-top: 4px;
+               float: left;
            }
 
            #size-nr {
                font-size: 12px;
                width: 38px;
                margin-right: 3px;
-               margin-top: 4px;
                text-align: right;
                border: 0;
            }
@@ -383,12 +382,6 @@
                border: 0;
            }
            
-           #filter {
-               width: 180px;
-               margin-right: 2px;
-               margin-left: 6px;
-           }
-        
             size-rope {
                 float: left;
                 margin-right: 12px;
@@ -396,6 +389,22 @@
                 width: 16px;
                 height: 16px;
             }
+           
+           .gearbox {
+               float: left;
+               margin-left: 4px;
+               background: #515151;
+               padding: 2px;
+               height: 23px;
+           }
+           
+               #filter {
+                   width: 180px;
+                   border: 0;
+                   background: #eee;
+               }
+        
+
          
     .fontby-container {
         float: right;
