Help menu: Show new window by cursor

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -184,6 +184,10 @@
             float: right;
         }
         
+        #help a {
+          cursor: alias;
+        }
+
         #engine-mode {
             position: fixed;
             z-index: 1000;
