--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -184,6 +184,10 @@
             float: right;
         }
         
+        #help .lm-head {
+          cursor: help;
+        }
+        
         #help a {
           cursor: alias;
         }
