Update UFO dialog link cursor to show target=_blank

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -188,7 +188,7 @@
           cursor: help;
         }
         
-        #help a {
+        #help a, a.newtab {
           cursor: alias;
         }
 
