--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1689,3 +1689,7 @@
 }
     
 
+/* hack to make the facebook widget sit up 5px to align with twitter and pinterest */ 
+.fb_iframe_widget span {
+  height: 25px !important;
+}
