changed color of progressbar

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1331,7 +1331,7 @@
     }
     
         #progressbar {
-            background: #f01616;
+            background: #515151;
             height: 100%;
             width: 0;
             transition: all 0.5s;
