--- a/purple-pill/templates/designspace.html
+++ b/purple-pill/templates/designspace.html
@@ -22,7 +22,7 @@
 
 <div class="design-space drop-area" ng-class="{unconfigured : data.currentDesignspace.type =='x'}">
     <div class="design-space-container" ng-show="data.currentDesignspace.type == 'x'">
-        <img src="img/hello.svg" height="100%" width="auto">
+        <img src="img/metapolator-logo-white.svg" height="100%" width="auto">
     </div>
     
     <div class="" ng-show="data.currentDesignspace.type != 'x'">
