* at the start of the export process, disable the export button so you can't click it while export is in progress * after finishing export, re-enable the export button (issue #522)

--- a/purple-pill/templates/instances.html
+++ b/purple-pill/templates/instances.html
@@ -60,7 +60,7 @@
                     <img src="img/deleteInstance.png">
                 </div>
             </div>
-            <div id="export-button" class="push-button" ng-click="data.exportFonts()" ng-class="{'inactive': !data.instancesForExport()}" ng-style="{'width': (data.fontExportWidth - 10) + 'px'}">
+            <div id="export-button" class="push-button" ng-click="data.exportFonts()" ng-class="{'inactive': !data.exportButtonIsActive()}" ng-style="{'width': (data.fontExportWidth - 10) + 'px'}">
                 Export…
             </div>
         </div>
