fixes #438 add name and version

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -179,6 +179,12 @@
 				border: 2px solid #515151;
 			}
 			
+	   #name-and-version {
+	       float: right;
+	       padding: 8px;
+	       color: #aaa;
+	   }
+			
         #help {
             padding: 0;
             float: right;
