--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -21,6 +21,8 @@
 </div>
 <!-- end of view buttons -->
 
+
+
 <div id="help" class="unselectable">
     <localmenu class="localmenu right">
         <div class="lm-head" ng-mousedown="data.selectMenu('help')" ng-class="{'lm-button-hover':data.localmenu.help}">
@@ -45,4 +47,8 @@
             </div>
         </div>
     </localmenu>
+</div>
+
+<div id="name-and-version">
+    Metapolator Beta 0.3.devel
 </div>
